2013-01-18  Karl Berry  <karl@tug.org>

	* writet1.c: apply diffs (cast removals) from pdftex.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* squeeze/Makefile.am: Enable silent rules.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* finclude.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexmac.h: Drop unused definition of M_PI & Co.

2012-04-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvips.c: do not free getenved string.

2012-03-30  Norbert Preining  <preining@logic.at>

	* resident.c: add new directive "c<filename> to config files, allowing
	to include other config files.
	* dvips.texi: document it.
	* contrib/config.proto: add example.
	 
2012-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Fixed a typo (in comment).

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-20  Werner Fink <werner@suse.de>

	* dospecial.c (fgetboundingbox): Increase `buf' size to avoid
	overrun.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST, DISTCLEANFILES): Make sure that
	'make distclean' removes all generated files.

2011-07-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bbox.c, dopage.c, dvips.c, pprescan.c, scanpage.c, dvips.1,
	dvips.help, dvips.info and dvips.texi: pTeX with otf package
	by S. Saito requires set2, put2, and independent options
	-noomega and -noptex.

2011-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* afm2tfm.c (openfiles), resident.c (residentfont): Allow
	find_suffix() to return a const string.

2011-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* protos.h, loadfont.c (pkopen), search.c (pksearch): Declare
	font name as const.

2011-05-06  Karl Berry  <karl@tug.org>

	* writet1.c: update copyright as in pdftexdir.
